@@ -7,6 +7,8 @@
     'added' or 'changed' signals out of order. 
     * libseahorse/seahorse-secure-memory.c: Don't try to use secure memory
     when allocating secure memory failed.
+    * libseahorse/seahorse-pgp-key-op.c: When changing password and password 
+    is entered wrong X number of times, then cancel operation.
     
 2006-09-23  Nate Nielsen  <nielsen@memberwebs.com>
 
